refactor(aws): Apply review suggestions for CloudFormation tasks
Addresses all reviewer feedback to improve code quality, consistency, and test robustness.

- Refactors the `waitForCompletion` logic to avoid repetition (DRY).
- Moves the common `stackName` property to the `AbstractCloudFormation` parent class.
- Updates the integration test to extend `AbstractLocalStackTest` for consistency.
- Changes all properties to use the standard `Property<T>` carrier type.
- Applies minor style and code improvements (e.g., using `getFirst()`).